ncc/testsuite/negative/where-constraints1.n
class A ['a] where 'a : System.IComparable ['a], System.IComparable ['a] { // E: constraint `System.IComparable.*' is already declared for 'a
}